@@ -1,3 +1,9 @@
+Tue Jun 09 15:15:15 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchclient/client.py: Patch from James Aylett: wrap
+	  delete_document() and search_structured().  Also, some whitespace
+	  cleanups.
+
 Thu May 14 21:37:45 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchclient/__init__.py: Add FlaxError to the list of
